adding takeOutputs variable to player while blocking outputs when checking sets